--- a/newmodel/app/views/home/index.html.erb
+++ b/newmodel/app/views/home/index.html.erb
@@ -1,1 +1,33 @@
 
+<table width="100%">
+    <!--两行五列-->
+    <tr align="center">
+     <td>
+      <a href="https://detail.tmall.com/item.htm?spm=a220m.1000858.1000725.96.5cc3bcd4RHSs5F&id=619312114890&skuId=4374940608671&user_id=2859900024&cat_id=2&is_b=1&rn=6bf300760b263e19da8611491f746376">
+      <%=image_tag('maowang.png', width:'150px') %>
+      <!--&yen表示人民币-->
+      <p style="color: orange;">&yen 499.00 包邮</p>
+      <p>包邮 猫王收音机</p>
+      <p style="color: gray;">猫王收音机</p>
+      <p style="color: gray;" align="right">如实描述：4.9</p>
+     </td>
+     <td>
+      <a href="https://detail.ju.taobao.com/home.htm?spm=608.pinpaituan_jushop.pmod-zebra-ju-shop-recommend-9916_1606112039791_16.2&id=10002610401168&item_id=625769843037">
+      <%=image_tag('edition.png', width:'150px') %>
+      <!--&yen表示人民币-->
+      <p style="color: orange;">&yen 386.00 包邮</p>
+      <p>圆领套头毛衫羊毛宽松开叉针织衫</p>
+      <p style="color: gray;">edition聚划算专场</p>
+      <p style="color: gray;" align="right">如实描述：4.8</p>
+     </td>
+     <td>
+      <a href="https://store.taobao.com/shop/view_shop.htm?spm=875.7931836/B.2016073.12.78334265DEtkwi&user_number_id=748681129&abtest=&pvid=8979654b-74a9-4f41-b2f6-f88f7179d334&pos=12&abbucket=&brandId=97466&acm=09042.1003.1.1200415&scm=1007.13029.131809.100200300000000">
+      <%=image_tag('crocs.png', width:'150px') %>
+      <!--&yen表示人民币-->
+      <p style="color: orange;">&yen 189.00 包邮</p>
+      <p>Crocs官方旗舰店</p>
+      <p style="color: gray;">天生自由</p>
+      <p style="color: gray;" align="right">如实描述：4.9</p>
+     </td>
+    </tr>
+</table>
